[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter III/VoltageDivider/VoltageDividerTwo.gd" type="Script" id=2]
[ext_resource path="res://Resources/Objects/PuzzleGraphics/HubUi.png" type="Texture" id=3]
[ext_resource path="res://Resources/Objects/Circuit/VoltageDividerTwo.png" type="Texture" id=4]
[ext_resource path="res://Resources/Objects/Circuit/VoltageDividerThree.png" type="Texture" id=5]
[ext_resource path="res://Resources/Objects/Circuit/plus.png" type="Texture" id=6]
[ext_resource path="res://Resources/Objects/Circuit/minus.png" type="Texture" id=7]

[node name="VoltageDividerTwo" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
color = Color( 0.384314, 0.384314, 0.384314, 1 )

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( 159.544, 89.809 )
scale = Vector2( 0.46, 0.46 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="." index="3"]
position = Vector2( 107.129, 103.381 )
scale = Vector2( 0.202, 0.202 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="." index="4"]
visible = false
position = Vector2( 107.129, 103.381 )
scale = Vector2( 0.202, 0.202 )
texture = ExtResource( 5 )

[node name="VoltageValue" type="Label" parent="." index="5"]
visible = false
margin_left = 246.393
margin_top = 82.6297
margin_right = 286.393
margin_bottom = 96.6297
text = "Vo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="VoltageValue" index="0"]
margin_left = -28.5425
margin_top = -3.56645
margin_right = -0.542496
margin_bottom = 18.4335
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="Button" parent="VoltageValue" index="1"]
margin_left = 23.7871
margin_top = -3.56645
margin_right = 51.7871
margin_bottom = 18.4335
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResOne" type="Button" parent="." index="6"]
margin_left = 113.0
margin_top = 106.0
margin_right = 129.0
margin_bottom = 146.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResTwo" type="Button" parent="." index="7"]
margin_left = 152.001
margin_top = 106.0
margin_right = 168.001
margin_bottom = 146.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltageLabel" type="Label" parent="." index="8"]
visible = false
margin_left = 157.826
margin_top = 108.314
margin_right = 197.826
margin_bottom = 156.314
rect_scale = Vector2( 0.7, 0.7 )
text = "+
Vo
-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="." index="9"]
margin_left = 44.3664
margin_top = 30.1464
margin_right = 84.3664
margin_bottom = 44.1464
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="10"]
margin_left = 234.346
margin_top = 112.622
margin_right = 274.346
margin_bottom = 126.622
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="11"]
margin_left = 229.611
margin_top = 136.73
margin_right = 286.611
margin_bottom = 156.73
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VoltageValue/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="VoltageValue/Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="ResOne" to="." method="_on_ResOne_pressed"]
[connection signal="pressed" from="ResTwo" to="." method="_on_ResTwo_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
